syntax = "proto3";
package resource_browser;

service ResourceBrowser {
  rpc SearchResources(SearchResourcesRequest) returns (SearchResourcesResponse);

  rpc CreateResource(CreateResourceRequest) returns (CreateResourceResponse);

  rpc GetResourceTypeNames(GetResourceTypeNamesRequest) returns (GetResourceTypeNamesResponse);

  rpc ImportResource(ImportResourceRequest) returns (ImportResourceResponse);

  rpc DeleteResource(DeleteResourceRequest) returns (DeleteResourceResponse);

  rpc RenameResource(RenameResourceRequest) returns (RenameResourceResponse);

  rpc CloneResource(CloneResourceRequest) returns (CloneResourceResponse);

  rpc ReparentResource(ReparentResourceRequest) returns (ReparentResourceResponse);
}

message SearchResourcesRequest {
  string searchToken = 1;
  optional string root_resource_id = 2;
}
message SearchResourcesResponse {
  string nextSearchToken = 2;
  uint64 total = 3;
  repeated ResourceDescription resourceDescriptions = 4;
}

message ResourceDescription {
  string id = 1;
  string path = 2;

  uint32 version = 3;
}

message GetResourceTypeNamesRequest {}
message GetResourceTypeNamesResponse {
  repeated string resource_types = 1;
}

message CreateResourceRequest {
  string resource_type = 1;

  optional string resource_path = 2;
  optional string parent_resource_id = 3;
  repeated InitPropertyValue init_values = 4;
}
message InitPropertyValue {
  string property_path = 1;
  string json_value = 2;
}

message CreateResourceResponse {
  string new_id = 1;
}

message ImportResourceRequest {
  string resource_name = 1;
  string shared_file_path = 2;
}
message ImportResourceResponse {
  string new_id = 1;
}

message DeleteResourceRequest {
  string id = 1;
}
message DeleteResourceResponse {}

message RenameResourceRequest {
  string id = 1;
  string new_path = 2;
}
message RenameResourceResponse {}

message CloneResourceRequest {
  string source_id = 1;
  optional string target_parent_id = 2;
  repeated InitPropertyValue init_values = 3;
}
message CloneResourceResponse {
  string new_id = 1;
}

message ReparentResourceRequest {
  string id = 1;
  string new_parent = 2;
}
message ReparentResourceResponse {}
